lc practice and separate cpp project from leetcode, do not reuse gtest